--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -5,6 +5,10 @@
     "routes": [
     {
     "src": "/(.*)",
-    "dest": "/"
+    "dest": "/app.js",
+     "methods":["GET","POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+        "headers":{
+            "Access-Control-Allow-Origin": "*"
+        }
     }
 ]}
