--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -5,7 +5,7 @@
     "routes": [
     {
     "src": "/(.*)",
-    "dest": "/app.js",
+    "dest": "/",
      "methods":["GET","POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
         "headers":{
             "Access-Control-Allow-Origin": "*"
