--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,19 +1,14 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "/app.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/app.js",
-            "methods":["GET","POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-            "headers":{
-                "Access-Control-Allow-Origin": "*"
-            }
-        }
-    ]
+  "version": 2,
+  "routes": [
+    {
+      "src": "/api/v1/auth/login",
+      "methods": ["OPTIONS", "POST"],
+      "headers": {
+        "Access-Control-Allow-Origin": "https://medicare-app-zeta.vercel.app",
+        "Access-Control-Allow-Methods": "GET, POST, OPTIONS, PUT, PATCH, DELETE",
+        "Access-Control-Allow-Headers": "Content-Type"
+      }
+    }
+  ]
 }
