--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -8,7 +8,7 @@
       "headers": {
         "Access-Control-Allow-Origin": "https://medicare-app-zeta.vercel.app",
         "Access-Control-Allow-Methods": "GET, POST, OPTIONS, PUT, PATCH, DELETE",
-        "Access-Control-Allow-Headers": "Content-Type"
+        "Access-Control-Allow-Headers": "Content-Type, Authorization, X-Requested-With"
       }
     }
   ]
