--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,19 @@
 {
-  "version": 2,
-  "routes": [
-    {
-      "src": "/api/v1/auth/login",
-      "methods": ["OPTIONS", "POST"],
-      "dest": "./index.js",
-      "headers": {
-        "Access-Control-Allow-Origin": "https://medicare-app-zeta.vercel.app",
-        "Access-Control-Allow-Methods": "GET, POST, OPTIONS, PUT, PATCH, DELETE",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization, X-Requested-With"
-      }
-    }
-  ]
+    "version": 2,
+    "builds": [
+        {
+            "src": "/index.js",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/index.js",
+            "methods":["GET","POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+            "headers":{
+                "Access-Control-Allow-Origin": "*"
+            }
+        }
+    ]
 }
